--- a/joystick.ioc
+++ b/joystick.ioc
@@ -63,7 +63,7 @@ Mcu.Pin11=PA12
 Mcu.Pin12=PA13
 Mcu.Pin13=PA14
 Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin15=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -188,17 +188,16 @@ SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USB_DEVICE.APP_RX_DATA_SIZE=1024
-USB_DEVICE.APP_TX_DATA_SIZE=1024
-USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE
-USB_DEVICE.VirtualMode=Cdc
-USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_DEVICE.CLASS_NAME_FS=HID
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING
+USB_DEVICE.MANUFACTURER_STRING=STMicroelectronic
+USB_DEVICE.VirtualMode=Hid
+USB_DEVICE.VirtualModeFS=Hid_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Mode=HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_HID_FS
 board=custom
 isbadioc=false
